# LocalWorkspaceSync

./: .gitignore  README.md  pyproject.toml  setup.py
.circleci/: config.yml  config_old.yml
.github/workflows/: python-package.yml
local_workspace_sync/: local_workspace_sync_config.py  local_workspace_sync_executor.py  main.py
tests/: test_local_workspace_sync_config.py  test_local_workspace_sync_executor.py
