[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LocalWorkspaceSync"
version = "0.0.1"
authors = [
  {name = "Anuradha Kadekar", email = "anuradha.k.satish@gmail.com"},
  {name = "Harsha Kadekar", email = "harsha.kadekar@gmail.com"},
]
description = "A package to sync your workspace to local folder"
readme = "README.md"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/harsha-kadekar/LocalWorkspaceSync"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]

[project.scripts]
local-workspace-sync-executor = "local_workspace_sync.local_workspace_sync_executor:main_entry"
local-workspace-sync-config = "local_workspace_sync.local_workspace_sync_config:main_entry"

[tool.hatch.build.targets.wheel]
packages = ["local_workspace_sync"]

[tool.coverage.run]
branch = true
source = ['.']
command_line = '-m pytest tests'

[tool.coverage.report]
fail_under = 95

[tool.coverage.html]
directory = ".coverage_html_report"

[tool.ruff]
include = ["pyproject.toml", "local_workspace_sync/**/*.py"]

[tool.ruff.lint]
select = [
    'A',
    'E',
    'F',
    'Q',
    'W',
    'S'
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 88